Fri Nov 15 14:14:39 UTC 2002  Craig Rodrigues  <crodrigu@bbn.com>

	* ace/POSIX_CB_Proactor.h:
	* ace/POSIX_CB_Proactor.cpp:
	  Do not build on Sun.

Fri Nov 15 14:08:11 UTC 2002  Craig Rodrigues  <crodrigu@bbn.com>

	* include/makeinclude/platform_linux.GNU:
	  Linux glibc has aio_ and pthread_ calls in librt.so.
	  Add fix so that librt.so is linked in if threads=0.

Fri Nov 15 07:48:37 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tests/OS_Test.cpp: Added the test cases for itoa from
	  Joseph Sarbak <joseph.sarbak@csfb.com>. 

Fri Nov 15 07:08:46 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* bin/auto_run_tests.lst: Fixed a few minor problems that showed
	  up in the daily builds.

Thu Nov 14 22:08:49 2002  Steve Huston  <shuston@riverace.com>

        * tests/Proactor_Test.cpp: Make this test behave better:
          - At the end of running time, close all the Senders. This should
            cancel all the Sender outstanding operations and trip all the
            Receivers into finishing their receives and closing themselves.
          - Change the default Sender/Receiver count from 20 to 10. This
            shrinks the log a bit without sacrificing test quality.
          - Change the "inferior platforms" default Sender/Receiver count
            from 1 to 3. With Proactor improvements made so far, let's give
            these platforms some more exercise and see what happens.

Thu Nov 14 23:10:32 UTC 2002  Craig Rodrigues  <crodrigu@bbn.com>

	* ace/POSIX_CB_Proactor.cpp:
	* ace/POSIX_CB_Proactor.h:
	* ace/POSIX_CB_Proactor.i:
	* ace/POSIX_Proactor.cpp:
	* ace/POSIX_Proactor.h:
	* ace/POSIX_Proactor.i:
	* ace/Proactor.cpp:
	* tests/Proactor_Test.cpp:
	  Fixed Proactor so that on platforms that support POSIX IO,
	  but not POSIX RT signals, it will compile.  Use the new
	  ACE_HAS_POSIX_REALTIME_SIGNALS macro.

Thu Nov 14 22:47:45 UTC 2002  Craig Rodrigues  <crodrigu@bbn.com>
