@@ -1,3 +1,9 @@
+Fri Nov 15 16:51:11 UTC 2002  Craig Rodrigues  <crodrigu@bbn.com>
+
+	* ace/POSIX_CB_Proactor.h:
+	* ace/POSIX_CB_Proactor.cpp:
+	  Do not build on Lynx.
+
 Fri Nov 15 14:14:39 UTC 2002  Craig Rodrigues  <crodrigu@bbn.com>
 
 	* ace/POSIX_CB_Proactor.h:
